--- a/shard.html
+++ b/shard.html
@@ -76,18 +76,6 @@
 				<div class="contribution card" data-aos="fade-up" data-aos-anchor=".summary" data-aos-offset="300">
 					<h3>My Contribution</h3>
 					<p>My role was focused on conducting user interviews and analysis; the UI design of Note, Journal, and Demo features; and the video editing for the final product pitch.</p>
-					<!--<div class="stat-result">
-						<div class="label">Upsell Purchase</div>
-						<div class="stat-increase">
-							17.09%
-						</div>
-					</div>
-					<div class="stat-result">
-						<div class="label">Revenue</div>
-						<div class="stat-increase">
-							14.11%
-						</div>
-					</div>-->
 				</div>
 			</section>
 
@@ -135,68 +123,14 @@
 					<img src="imgs/shard_problem space 3.gif" alt="onboarding">
 					<p class="PS">Every onboarding be like... <br>P.S. Great gif &amp; product, Abstract!</p>
 				</div>
-
-				<div class="solutions section-break">
-					<h2>Solution at a Glance</h2>
-					<p>Our team is really proud of this product promotion video. <br>Remember to turn on your volume for a full experience!</p>
-					<video src="imgs/shard_hero.mp4" controls autoplay muted></video>
-					<!--<div class="solution-list">
-						<ul class="solution-nav">
-							<li class="solution-nav-item" data-view="fomc_solution_original.png">Original</li>
-							<li class="solution-nav-item" data-view="fomc_solution_1.png">Iteration 1</li>
-							<li class="solution-nav-item" data-view="fomc_solution_2.png">Iteration 2</li>
-							<li class="solution-nav-item" data-view="fomc_solution_3.png">Iteration 3</li>
-							<li class="solution-nav-item" data-view="fomc_solution_4.png">Iteration 4</li>
-							<li class="solution-nav-item active" data-view="fomc_solution_5.png">Final</li>
-						</ul>
-						<img width="800" height="600" class="solution-iteration-view" src="imgs/fomc_solution_5.png" alt="Design Iteration">
-					</div>-->
+				<div class="goals section-break">
+					<h2>Project Goals</h2>
+					<p>Our goal is to design a tool that can efficiently support integrating, documenting, and tracking information of design projects for UX design teams as projects iterate.</p>
 				</div>
 			</section>
 
-			<!--<section class="process banner">
-				<div class="process-content">
-					<h2>Design Process</h2>
-					<div class="process-diagram">
-						<img src="imgs/design-process-loop.svg" alt="Process Cycle" class="process-cycle">
-						<ul hidden>
-							<li>Research</li>
-							<li>Ideation</li>
-							<li>Prototype</li>
-							<li>Test</li>
-						</ul>
-					</div>
-				</div>
-			</section>-->
-
-			<section class="breakdown text-block ">
+			<section class="breakdown text-block">
 				<section class="research">
-					<!--
-					<span data-aos="hide-fade" data-aos-anchor=".ideation" data-aos-anchor-placement="top-center">
-						<div class="breakdown-floater" data-aos="fade-right" data-aos-anchor-placement="center-top"></div>
-					</span>
-					-->
-					<h2>Project Goals</h2>
-					<p>Our goal is to design a tool that can efficiently support integrating, documenting, and tracking information of design projects for UX design teams as projects iterate.</p>
-					<div class="step-block section-break">
-						<!--<h3 data-aos="text-underline">
-							Who is my customer?
-						</h3>-->
-								<!--<h4>The documentation work we will involve in our project scope includes</h4>
-								<ul>
-									<li>Documentation during the progress of a project <br>(Focusing on agile development cycle)</li>
-									<li>The final documentation for delivery at the end stage of a project</li>
-								</ul>
-								<h4>The information to be documented may include</h4>
-								<ul>
-									<li>Designers’ ideas</li>
-									<li>Visualization work</li>
-									<li>Feedback from stakeholders</li>
-									<li>Decisions made and their design rationales</li>
-									<li>Changes made (version control)</li>
-									<li>Final design specification documentation</li>
-								</ul>-->
-					</div>
 					<div class="step-block section-break">
 						<h2>Key Research Questions</h2>
 						<p>
@@ -285,20 +219,10 @@
 								<p>In the event a final documentation effort occurs, the process of gathering notes and artifacts from various digital and analog sources is very time-consuming.</p>
 							</div>
 						</div>
-						<!--<div class="magnify-wrapper">
-							<div class="magnify-focus"></div>
-							<img class="magnify-image" src="imgs/shard_affinity wall1.png" alt="Page Usability Problem Overview">
-						</div>-->
+						
 					</div>
-				</section>
-
-				<section class="ideation">
-					<!---
-					<span data-aos="hide-fade" data-aos-anchor=".prototype" data-aos-anchor-placement="top-center">
-						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".ideation" data-aos-anchor-placement="top-center"></div>
-					</span>-->
-					<h2>Design Requirements</h2>
 					<div class="step-block section-break">
+						<h2>Design Requirements</h2>
 						<p>Based on our research findings, we discovered six main requirements.</p>
 						<img src="imgs/shard_requirement.jpg" alt="requirements">
 						<p class="bluetext">Encourage users to put down information early in the design process.</p>
@@ -336,29 +260,17 @@
 							<li>Supporting efficient presentation of user flow</li>
 						</ol>
 					</div>
-				</section>
-
-				<section class="maps">
-					<!--
-					<span data-aos="hide-fade" data-aos-anchor=".test" data-aos-anchor-placement="top-center">
-						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".prototype" data-aos-anchor-placement="top-center"></div>
-					</span>-->
-					<h2>Big Picture Evaluation</h2>
 					<div class="step-block section-break">
+						<h2>Big Picture Evaluation</h2>
 						<p>We utilized an information flow chart to find out when and where information gets lost.</p>
 						<div><a href="imgs/shard_IF@2x.png" data-lightbox="gallery" data-title="Information Flow Chart" aria-label="Information Flow Chart"><img src="./imgs/shard_IF.png" alt="Information Flow Chart"></a></div>
 						<p>We also identified touchpoints and brainstormed solutions via a user journey map.</p>
 						<div><a href="imgs/shard_journey@2x.png" data-lightbox="gallery" data-title="User Journey Map" aria-label="User Journey Map"><img src="./imgs/shard_journey.png" alt="User Journey Map"></a></div>
 					</div>
 				</section>
-
-				<section class="concept">
-					<!--
-					<span data-aos="hide-fade" data-aos-anchor=".test" data-aos-anchor-placement="top-center">
-						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".prototype" data-aos-anchor-placement="top-center"></div>
-					</span>-->
-					<h2>Business Considerations</h2>
+				<section class="business">
 					<div class="step-block section-break">
+						<h2>Business Considerations</h2>
 						<p>Any great innovation without a market would eventually become a failure. A value proposition is helpful in terms of identifying the market needs, pain points, pain relievers, and delights.</p>
 						<div><a href="imgs/shard_VP.jpg" data-lightbox="gallery" data-title="Value Proposition" aria-label="Value Proposition"><img src="./imgs/shard_VP.jpg" alt="Value Proposition"></a></div>
 						<p>It's important to stay agile and decide on a starting <mark>MVP</mark> as a start. The key actions that we decided to focus on are as follows:</p>
@@ -370,99 +282,92 @@
 						</ol>
 						<div><a href="imgs/shard_mvp.jpg" data-lightbox="gallery" data-title="MVP" aria-label="MVP"><img src="./imgs/shard_mvp.jpg" alt="MVP"></a></div>
 						<h3>Finalized MVP Features</h3>
-						<img src="imgs/shard_MVPFeatures.png" alt="competitors">
+						<div><a href="imgs/shard_MVPFeatures@2x.png" data-lightbox="gallery" data-title="MVP" aria-label="MVP"><img src="./imgs/shard_MVPFeatures.png" alt="MVP"></a></div>
 					</div>
 				</section>
-
-				<section class="test">
-					<!--
-					<span data-aos="hide-fade" data-aos-anchor=".solution" data-aos-anchor-placement="top-center">
-						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".test" data-aos-anchor-placement="top-center"></div>
-					</span>-->
-					<h2>Lo-fi Prototype</h2>
+				<section class="iterations">
 					<div class="step-block section-break">
+						<h2>Lo-fi Prototype</h2>
 						<h3>Update information and design from other tools to the standalone platform, Shard, and collect feedback.</h3>
 						<p>Keeping the above decisions in mind, we started doing wireframes and prototypes to demonstrate how we could integrate design tools and communication tools (e.g. Sketch and Slack) with our platform to support information integration, design presentation, and design documentation with features such as <mark>Notes</mark>, <mark>Comments</mark>, <mark>Flow</mark>, and <mark>Journal</mark>.</p>
 						<div><a href="imgs/shard_lofi@2x.png" data-lightbox="gallery" data-title="Low-fi prototype" aria-label="Low-fi prototype"><img src="./imgs/shard_lofi.png" alt="Low-fi prototype"></a></div>
 					</div>
-
-					<h2>Iteration</h2>
 					<div class="step-block section-break">
+						<h2>Iteration</h2>
 						<h3>We used our low-fi prototoype on guerrilla testing, and modified the key features as shown below:</h3>
-						<img src="imgs/shard_iteration1.png" alt="shard_iteration1">
-						<img src="imgs/shard_iteration2.png" alt="shard_iteration2">
+						<div><a href="imgs/shard_iteration1@2x.png" data-lightbox="gallery" data-title="Iteration 1" aria-label="Iteration 1"><img src="./imgs/shard_iteration1.png" alt="Iteration 1"></a></div>
+						<div><a href="imgs/shard_iteration2@2x.png" data-lightbox="gallery" data-title="Iteration 2" aria-label="Iteration 2"><img src="./imgs/shard_iteration2.png" alt="Iteration 2"></a></div>
 					</div>
-
-					<h2>Design Language</h2>
 					<div class="step-block section-break">
+						<h2>Design Language</h2>
 						<h3>Before moving on to the high-fi prototype, we held a brainstorming discussion about branding and the image we hope to convey in our visual style.</h3>
 						<img src="imgs/shard_style1.png" alt="shard_style1">
 						<img src="imgs/shard_style2.png" alt="shard_style2">
 						<img src="imgs/shard_style3.png" alt="shard_style3">
 						<img src="imgs/shard_style4.png" alt="shard_style4">
 					</div>
-
-
-
-					<!--<div class="step-block">
-						<h3 data-aos="text-underline">
-							What brings the most business value?
-						</h3>
-						<h4>Experiment 1:
-							How can we promote the best value call out &amp; price order?
-						</h4>
-						<p>As a promotion-focused company, our customers rely heavily on coupons and seasonal discounts. Hence highlighting those offers is essential for the product page.</p>
-						<img src="imgs/fomc_best-value-1.png" alt="First Iteration of Club Length">
-						<p>After A/B testing, we learned that sorting the price range from high to low helps boost the Average Order Value. However, the red call out made some customers think the best value option is pre-selected.</p>
-						<img src="imgs/fomc_best-value-2.png" alt="Second Iteration of Club Length">
-						<p>I fine-tuned the best value call out to align with customer expectations by making the option pre-selected and filling the background using our branded black to distinguish from other options.</p>
-						<img src="imgs/fomc_best-value-3.png" alt="Final Iteration of Club Length">
-
-						<h4>Experiment 2:
-							How can we maximize coupon conversions?
-						</h4>
-						<p>After A/B testing for awhile, we realized customers didn’t use coupons as much on the new design. In response, I altered the coupon placement to sit above the Add To Cart button and while changing the background color of the panel to make the coupon message "pop". Conversion rate and coupon usage increased significantly after the adjustment.</p>
-						<img src="imgs/fomc_coupon.png" alt="Iteration of Coupon Code">
-					</div>
 				</section>
 			</section>
+				
+			<section class="solution">
+				<div class="step-block section-break">
+					<h2>Design Highlights</h2>
+					<div class="stagger-row">
+						<div class="media-content">
+							<video src="imgs/Demo.mp4" controls autoplay loop muted>
+						</div>
+						<div class="text-block">
+							<h3>Demo</h3>
+							<p>No need to write emails with screen shots or screen recordings and flow annotations. Shard incorporate voice recording, subtitles, and interactions so you only need to demo your design to stakeholders with one tool.</p>
+						</div>
+					</div>
+					<div class="stagger-row stagger-row-reverse">
+						<div class="media-content">
+							<video src="imgs/Journal.mp4" controls autoplay loop muted>
+						</div>
+						<div class="text-block">
+							<h3>Journal</h3>
+							<p>New to the team? Need to onboard a new designer? No problem! Journal documents versions for you so you can see the iteration history. </p>
+						</div>
+					</div>
+					<div class="stagger-row">
+						<div class="media-content">
+							<video src="imgs/Flow.mp4" controls autoplay loop muted>
+						</div>
+						<div class="text-block">
+							<h3>Flow</h3>
+							<p>Need to showcase the interactions/screen transition at a close look? Shard's got your back!</p>
+						</div>
+					</div>
+					<div class="stagger-row stagger-row-reverse">
+						<div class="media-content">
+							<video src="imgs/Comment.mp4" controls autoplay loop muted>
+						</div>
+						<div class="text-block">
+							<h3>Comment</h3>
+							<p>Sometimes team members might need to provide feedback to a group of elements. Being able to draw a hotspot is more useful than comment on an elements in this case. Oftentimes, designers need to sift through feedback based on certain keywords. Being able to search comments via the search feature can be timesaving.</p>
+						</div>
+					</div>
+					<div class="stagger-row">
+						<div class="media-content">
+							<video src="imgs/Note.mp4" controls autoplay loop muted>
+						</div>
+						<div class="text-block">
+							<h3>Note</h3>
+							<p>Keep the design notes private to you, or publish them after the project wrap-up. Your notes can be very useful to other designers later on!</p>
+						</div>
+					</div>
 
-			<section class="solution banner">
-				<div class="solution-content">
-					<h2>Live Design</h2>
-					<video src="imgs/fomc_live.mp4" controls autoplay muted></video>
 				</div>
 			</section>
 
-			<section class="conclusion text-block">
-				<h2>Results</h2>
-				<div class="stat-bar">
-					<div class="stat-result">
-						<div class="label">Upsell Purchase</div>
-						<div class="stat-increase">
-							17.09%
-						</div>
-					</div>
-					<div class="stat-result">
-						<div class="label">Revenue</div>
-						<div class="stat-increase">
-							14.11%
-						</div>
-					</div>
-					<div class="stat-result">
-						<div class="label">Abandonment Rate</div>
-						<div class="stat-decrease">
-							28.95%
-						</div>
-					</div>
-				</div>-->
-				<!--<video src="" alt="Positive Feedback Video"></video>-->
-				<!--<h2>What I Learned</h2>
-				<p>
-					Even a tiny visual change matters in e-commerce
-					B2C E-commerce has its unique UX practices where not only do we need to focus on perfect user flows but final visual details are just as critical. Of course, all of the assessments took place within a fickle market and customer behavior varied significantly from day to day. H&D’s customer demographics also lean heavily towards older adults which brings a unique set of challenges and considerations. I needed to balance business needs while advocating for the users and measuring against a fluid backdrop. It was definitely a rewarding experience and helped lay down a solid foundation for my later projects at H&D.
-				</p>
-			</section>-->
+			<section class="conclusion banner">
+				<div class="content">
+					<h2>Solution at a Glance</h2>
+					<p>Our team is really proud of this product promotion video. <br>Remember to turn on your volume for a full experience!</p>
+					<video src="imgs/shard_hero.mp4" controls autoplay muted></video>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="icons">
