--- a/fomc.html
+++ b/fomc.html
@@ -191,22 +191,14 @@
 						<p>
 							Based on the customer profile, I designed a series of usability tasks and recruited representative users from UserTesting.com. A few major issues include:
 						</p>
-						<ol>
-							<li>
 								<ul>
 									<li>The relationship of price, starting month, and Club length is unclear.</li>
 									<li>The scannability of prices needs to be improved.</li>
 									<li>The interaction lacks feedback to inform the customer of current selection status.</li>
-								</ul>
-							</li>
-							<li>
-								<ul>
 									<li>The concepts of upsells and add-ons need to be delivered clearly.</li>
 									<li>The discoverability of upsell product information needs to be increased.</li>
 									<li>The upsell copy was mistaken as add-ons.</li>
 								</ul>
-							</li>
-						</ol>
 					</div>
 					
 					<h2 >Rapid prototyping</h2>
@@ -239,7 +231,7 @@
 					<h2 >Prototype</h2>
 					<div class="step-block section-break">
 						<p>Using the wireframes as a starting point, I created a high-fidelity, interactive prototype for remote user testing on UserTesting.com.</p>
-						<video width="1152" src="imgs/fomc_hifi.mp4" controls autoplay muted></video>
+						<video class="production" width="1152" src="imgs/fomc_hifi.mp4" controls autoplay muted></video>
 
 						<div class="step-block">
 							<h2>Mobile Devices - the Opportunities</h2>
