--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
 					Throughout my career transition, I got help from friends, teachers, and even strangers!
 					I want to share my passion and what I learned throughout the journey.</p>
 				<div class="talks">
-					<video width="1152" src="imgs/Ignite UX.mp4" controls autoplay muted></video>
-					<video width="1152" src="imgs/Passion Pitch.mp4" controls autoplay muted></video>
+					<video class="TalkVideo" width="1152" src="imgs/Ignite UX.mp4" controls autoplay muted></video>
+					<video class="TalkVideo" width="1152" src="imgs/Passion Pitch.mp4" controls autoplay muted></video>
 				</div>
 			</div>
 		</div>
