--- a/shard.html
+++ b/shard.html
@@ -75,7 +75,7 @@
 
 				<div class="contribution card" data-aos="fade-up" data-aos-anchor=".summary" data-aos-offset="300">
 					<h3>My Contribution</h3>
-					<p>My role was focused on conducting user interviews and analysis; the UI design of Note, Journal, and Demo features; and the video editing for the final product pitch.</p>
+					<p>My role was focused on conducting user interviews and analysis; the UI design of Note, Journal, and the demo feature of Flow; and the video editing for the final product pitch.</p>
 				</div>
 			</section>
 
@@ -223,7 +223,7 @@
 					</div>
 					<div class="step-block section-break">
 						<h2>Design Requirements</h2>
-						<p>Based on our research findings, we discovered six main requirements.</p>
+						<p>Based on our research findings, we discovered 5 design requirements.</p>
 						<img src="imgs/shard_requirement.jpg" alt="requirements">
 						<p class="bluetext">Encourage users to put down information early in the design process.</p>
 							<p>Most users reported that it’s labor intensive to write documents to justify the design decisions retroactively. Our solution needs to encourage users to put down notes early on.</p>
@@ -289,7 +289,7 @@
 					<div class="step-block section-break">
 						<h2>Lo-fi Prototype</h2>
 						<h3>Update information and design from other tools to the standalone platform, Shard, and collect feedback.</h3>
-						<p>Keeping the above decisions in mind, we started doing wireframes and prototypes to demonstrate how we could integrate design tools and communication tools (e.g. Sketch and Slack) with our platform to support information integration, design presentation, and design documentation with features such as <mark>Notes</mark>, <mark>Comments</mark>, <mark>Flow</mark>, and <mark>Journal</mark>.</p>
+						<p>Keeping the above decisions in mind, we started doing wireframes and prototypes to demonstrate how we could integrate design tools and communication tools (e.g. Sketch and Slack) with our platform to support information integration, design presentation, and design documentation with features such as <mark>Note</mark>, <mark>Comment</mark>, <mark>Flow</mark>, and <mark>Journal</mark>.</p>
 						<div><a href="imgs/shard_lofi@2x.png" data-lightbox="gallery" data-title="Low-fi prototype" aria-label="Low-fi prototype"><img src="./imgs/shard_lofi.png" alt="Low-fi prototype"></a></div>
 					</div>
 					<div class="step-block section-break">
@@ -317,7 +317,7 @@
 							<video src="imgs/Demo.mp4" controls autoplay loop muted>
 						</div>
 						<div class="text-block">
-							<h3>Demo</h3>
+							<h3>Flow - the ability to demo user flows and interactions</h3>
 							<p>No need to write emails with screen shots or screen recordings and flow annotations. Shard incorporate voice recording, subtitles, and interactions so you only need to demo your design to stakeholders with one tool.</p>
 						</div>
 					</div>
@@ -326,8 +326,8 @@
 							<video src="imgs/Journal.mp4" controls autoplay loop muted>
 						</div>
 						<div class="text-block">
-							<h3>Journal</h3>
-							<p>New to the team? Need to onboard a new designer? No problem! Journal documents versions for you so you can see the iteration history. </p>
+							<h3>Flow - design iterations visualized</h3>
+							<p>New to the team? Need to onboard a new designer? No problem! Check design versions anytime on Shard so you or your teammates can see the iteration history. You can click in journal log to see each change as well.</p>
 						</div>
 					</div>
 					<div class="stagger-row">
@@ -335,8 +335,8 @@
 							<video src="imgs/Flow.mp4" controls autoplay loop muted>
 						</div>
 						<div class="text-block">
-							<h3>Flow</h3>
-							<p>Need to showcase the interactions/screen transition at a close look? Shard's got your back!</p>
+							<h3>Flow - get a closer look of your interactions</h3>
+							<p>Need to showcase the interactions/screen transition at a closer look? Shard's got your back!</p>
 						</div>
 					</div>
 					<div class="stagger-row stagger-row-reverse">
