--- a/shard.html
+++ b/shard.html
@@ -317,8 +317,8 @@
 							<video src="imgs/Demo.mp4" controls autoplay loop muted>
 						</div>
 						<div class="text-block">
-							<h3>Flow - the ability to demo user flows and interactions</h3>
-							<p>No need to write emails with screen shots or screen recordings and flow annotations. Shard incorporate voice recording, subtitles, and interactions so you only need to demo your design to stakeholders with one tool.</p>
+							<h3>Flow - The Ability to Demo User Flows and Interactions</h3>
+							<p>No need to write emails with screen shots or screen recordings and flow annotations. Shard incorporates voice recording, subtitles, and interactions so you only need to demo your design to stakeholders with one tool.</p>
 						</div>
 					</div>
 					<div class="stagger-row stagger-row-reverse">
@@ -326,8 +326,8 @@
 							<video src="imgs/Journal.mp4" controls autoplay loop muted>
 						</div>
 						<div class="text-block">
-							<h3>Flow - design iterations visualized</h3>
-							<p>New to the team? Need to onboard a new designer? No problem! Check design versions anytime on Shard so you or your teammates can see the iteration history. You can click in journal log to see each change as well.</p>
+							<h3>Flow - Design Iterations Visualized</h3>
+							<p>New to the team? Need to onboard a new designer? No problem! Check design versions anytime on Shard so you or your teammates can see the iteration history. You can click on journal log to see each change as well.</p>
 						</div>
 					</div>
 					<div class="stagger-row">
@@ -335,8 +335,8 @@
 							<video src="imgs/Flow.mp4" controls autoplay loop muted>
 						</div>
 						<div class="text-block">
-							<h3>Flow - get a closer look of your interactions</h3>
-							<p>Need to showcase the interactions/screen transition at a closer look? Shard's got your back!</p>
+							<h3>Flow - Get a Closer Look at Your Interactions</h3>
+							<p>Need to showcase the interactions/screen transition with a closer look? Shard's got your back!</p>
 						</div>
 					</div>
 					<div class="stagger-row stagger-row-reverse">
@@ -345,7 +345,7 @@
 						</div>
 						<div class="text-block">
 							<h3>Comment</h3>
-							<p>Sometimes team members might need to provide feedback to a group of elements. Being able to draw a hotspot is more useful than comment on an elements in this case. Oftentimes, designers need to sift through feedback based on certain keywords. Being able to search comments via the search feature can be timesaving.</p>
+							<p>Sometimes team members might need to provide feedback to a group of elements. Being able to draw a hotspot is more useful than commenting on an element in this case. Oftentimes, designers need to sift through feedback based on certain keywords. Being able to search comments via the search feature can be timesaving.</p>
 						</div>
 					</div>
 					<div class="stagger-row">
