--- a/fomc.html
+++ b/fomc.html
@@ -206,7 +206,7 @@
 						<h3>From low-fi to hi-fi, every interaction is supported by research based rationales</h3>
 						<h4>Paper and pen for quick ideatation</h4>
 						<div class="project_photowrap">
-							<p>After discussing with other senior team members with my sketches, I learned more about which designs worked or didn't work well in the past.</p>
+							<p>After discussing my sketches with other senior team members, I learned more about which designs worked or didn't work well in the past.</p>
 							<div><a href="imgs/FOMC_sketch@2x.png" data-lightbox="gallery" data-title="Quick sketch to ideate" aria-label="Quick sketch to ideate"><img src="./imgs/FOMC_sketch@1x.png" alt="Quick sketch to ideate"></a></div>
 						</div>
 						
