--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 		<div class = "contact_flex">
 			<div class = "card_title">
 				<h2>YouTube Tutorials</h2>
-				<p>As a UX practitioner in the U.S., I started my YouTube channel to share UX related knowledge with Taiwanese designers. Unlike in the U.S., UX resources in English aren't always digestable for ESL speakers in Taiwan. I always try my best to democratize knowledge for those who don't have the access or equal opportunities.</p>
+				<p>As a UX practitioner in the U.S., I started my YouTube channel to share UX related knowledge with Taiwanese designers. Unlike in the U.S., UX resources in English aren't always digestable for ESL speakers in Taiwan. I always try my best to democratize knowledge for those who don't have access or equal opportunities.</p>
 				<div class="buttons">
 					<a href="https://www.youtube.com/channel/UCBzxKMkzhkqK7rUM35Qp2hg/videos"data-title="Youtube channel" aria-label="Youtube channel" target="_blank"><button type="button" class="button" data-filter="all">Check Out My Channel - It's Just BS</button></a>
 				</div>
