--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 				</div>
 		</div>
 
-		<div class="bg_ivory">
+		<div class="bg_ivory_talk">
 			<div class = "card_title">
 				<h2>Talks</h2>
 				<p>I think the best part about the UX community is that everyone cares about everyone.
