--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Hello! Welcome to Blair Shen's portfolio. I'm a UX designer with a Master's degree in HCI from the University of Michigan.">
+    <meta name="description" content="Blair is a UX designer with a Master's degree in HCI from the University of Michigan.">
     <meta name="keywords" content="Blair, Shen, Yu-Yin, Portfolio, UX Reseacher, Senior, UX Designer, Design, Product, UI">
     <meta name="author" content="Blair Shen">
     <meta name="msapplication-TileColor" content="#ffffff">
@@ -19,21 +19,15 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     
     <!-- Icons -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png?ckcachebust=78fd3436c30a992e2d7dab20876dfbe0">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png?ckcachebust=33a6d06672422a3a7193f47a314e0aca">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png?ckcachebust=125c1aa0ccdbe7210b336294e56d2f20">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png?ckcachebust=23bf0e79076ba6a8f3b9433c33d26ceb">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png?ckcachebust=56c98ba9ba0f71f4a1657cd597151c03">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png?ckcachebust=faeacfa8c96c7042382fd85669b8ac93">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png?ckcachebust=42d5bdab6aced18845cddacc3797e3c3">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png?ckcachebust=7d644e55e6bb1eb2d60cd36dc7d1a433">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png?ckcachebust=9e48ba0686ada60483bf347b5a1cffd0">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png?ckcachebust=496add98ba832bf2f5db0763cc36c8a0">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?ckcachebust=b1fc67b626394454a30a41828b265849">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png?ckcachebust=944e8395087254934504e82d0210e57b">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?ckcachebust=44db25936b431bbb7a7699c661eee91d">
+    <link rel="apple-touch-icon" sizes="180x180" href="imgs/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png">
+	<link rel="manifest" href="imgs/site.webmanifest">
+	<link rel="mask-icon" href="imgs/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="/manifest.json?ckcachebust=252fc8908f61a93bd43ec4541e2e241b">
-    <title >Blair Shen</title>
+    <title >Blair Shen - UX/Product Designer</title>
 </head>
 
 	<body>
@@ -47,10 +41,10 @@
 		
 		    <nav class="header-nav">
 		        <ul>
-		            <li><a href = "index.html#home_h1" ><div class="header-item nav-group-work">Work</div></a></li>
-		            <li><a href = "graphic.html" ><div class="header-item nav-group-playground">Playground</div></a></li>
+		            <li><a href = "index.html#home_h1" ><div class="header-item nav-group-work">Projects</div></a></li>
+		            <li><a href = "graphic.html" ><div class="header-item nav-group-playground">UI Playground</div></a></li>
 		            <li><a href = "about.html" ><div class="header-item nav-group-about">About</div></a></li>
-		            <li><a href = "https://drive.google.com/file/d/1OekFso5PZZfHPDYHy_KhTiAXB17vkZ1y/view?usp=sharing" target="_blank"><div class="header-item nav-group-resume">Resume</div></a></li>
+		            <li><a href = "imgs/Blair Shen - Resume.pdf" target="_blank"><div class="header-item nav-group-resume">Resume</div></a></li>
 		         </ul>
 		        
 		    </nav>
@@ -259,7 +253,7 @@
 				</a>
 				<div class="mix-details fadeIn-top">
 						<h3>UI Design</h3>
-						<p>Graphic &amp; UI playground</p>
+						<p>Graphic &amp; UI Playground</p>
 				</div>
 				<div class="project_detail">
 					<h3>UI Design</h3>
@@ -346,7 +340,7 @@
 				<img src="imgs/YT1.png" alt="card1">
 				<div class="card_container">
 					<h4><b>How to Choose a Site Builder?</b></h4></a>
-					<p>I shared my experiences of using different site builders to make my portfolio.</p> 
+					<p>I shared my experiences of using different site builders/code editors to make my portfolio.</p> 
 				</div>
 			</div>
 			
@@ -452,6 +446,7 @@
 				<a href="mailto:yuyshen@umich.edu" class = "footer-icon" aria-label="Blair's email"><i class="far fa-envelope"></i></a>
 				<a href="https://medium.com/@blairshen_2615" class = "footer-icon" aria-label="Blair's medium" target="_blank"><i class="fab fa-medium-m"></i></a>
 				<a href="https://github.com/yuyinshen719" class = "footer-icon" aria-label="Blair's github" target="_blank"><i class="fab fa-github"></i></a>
+				<a href="https://www.youtube.com/channel/UCBzxKMkzhkqK7rUM35Qp2hg/videos" class = "footer-icon" aria-label="Blair's Channel" target="_blank"><i class="fab fa-youtube"></i></a>
 			</div>
 			
 				<p>Blair Shen &copy; 2020</p>
