--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <div class = "about_content">
         <img src="imgs/Home_1.png" class = "about" alt = "profile picture"/>
         <h1>Blair Shen - It's NOT just BS...</h1>   
-        <p>I came to the states to pursue Human-Computer Interaction (UX Design & Research) after completing my M.A. in Communication & Technology Studies in Taiwan. My background in literature, humanities, and social science allows me to solve problems through <b>translating research data into empathetic and logical design solutions</b>. My lifetime goal is to narrow the gap among genders, classes, and ethnicities via design.<br><br>During my free time you can find me dancing, consuming some nerdy content online, and training my cat to do dog tricks.</p>
+        <p>My background in literature, humanities, social science, along with 5+ years practical experience allows me to solve problems through <b>translating research data into empathetic and logical design solutions</b>. My lifetime goal is to narrow the gap among genders, classes, and ethnicities via design.<br><br>During my free time you can find me prepping for my next UX YouTube video, giving pro bono portfolio reviews, or trying my best to annoy my 3 kitties, Pippin, Pumpkin, and Cortana.</p>
         <div class="project_photowrap">
             <div><img src="./imgs/about1.png" alt="About1"></div>
             <div><img src="./imgs/about2.png" alt="About2"></div>
@@ -86,7 +86,7 @@ So… why am I telling you this? It shows that I’m not afraid of experimenting
                     <a href="https://www.youtube.com/channel/UCBzxKMkzhkqK7rUM35Qp2hg/videos" class = "footer-icon" aria-label="Blair's Channel" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
                 
-                    <p>Designed &amp; coded by Blair Shen &copy; 2019</p>
+                    <p>Designed &amp; coded by Blair Shen &copy; 2020</p>
             </footer>
     
 </body>
