--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 		<div class = "contact_flex">
 			<div class = "card_title">
 				<h2>YouTube Tutorials</h2>
-				<p>As a UX practitioner in the U.S., I started my YouTube channel to share UX related knowledge with Taiwanese designers. Unlike in the U.S., UX resources in English aren't always digestable for ESL speakers in Taiwan. I always try my best to democratize knowledge for those who don't have access or equal opportunities.</p>
+				<p>As a UX practitioner in the U.S., I started my YouTube channel to share UX related knowledge with Taiwanese designers. Unlike in the U.S., UX resources in English aren't always digestable for ESL speakers in Taiwan. I'm most fulfilled when I help others grow and democratize knowledge for those who don't have access or equal opportunities.</p>
 				<div class="buttons">
 					<a href="https://www.youtube.com/channel/UCBzxKMkzhkqK7rUM35Qp2hg/videos"data-title="Youtube channel" aria-label="Youtube channel" target="_blank"><button type="button" class="button" data-filter="all">Check Out My Channel - It's Just BS</button></a>
 				</div>
@@ -417,7 +417,7 @@
 
 			<div class="contact">
 				<h2>Contact</h2>
-				<p>Feel free to contact me :D</p>
+				<p>Hey you! Yes, you. Let's have a cuppa coffee, shall we?</p>
 					<!--<i class="far fa-envelope">&nbsp yuyshen@umich.edu</i> &nbsp | &nbsp
 					<i class="fas fa-mobile-alt">&nbsp 734-882-9862</i> &nbsp | &nbsp
 					<a href = 'https://linkedin.com/in/yu-yin-shen/' aria-label="Blair's LinkedIn"><i class="fab fa-linkedin"> &nbsplinkedin.com/in/yu-yin-shen/</i></a><br><br>-->
