--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <div class = "about_content">
         <img src="imgs/Home_1.png" class = "about" alt = "profile picture"/>
         <h1>Blair Shen - It's NOT just BS...</h1>   
-        <p>My background in literature, humanities, social science, along with 5+ years practical experience allows me to solve problems through <b>translating research data into empathetic and logical design solutions</b>. My lifetime goal is to narrow the gap among genders, classes, and ethnicities via design.<br><br>During my free time you can find me prepping for my next UX YouTube video, giving pro bono portfolio reviews, or trying my best to annoy my 3 kitties, Pippin, Pumpkin, and Cortana.</p>
+        <p>My background in literature, humanities, social science, along with 5+ years practical experience allows me to solve problems through translating research data into empathetic and logical design solutions. <b>My lifetime goal is to narrow the gap among genders, classes, and ethnicities via design.</b><br><br>During my free time you can find me prepping for my next UX YouTube video, giving pro bono portfolio reviews, or trying my best to annoy my 3 kitties, Pippin, Pumpkin, and Cortana.</p>
         <div class="project_photowrap">
             <div><img src="./imgs/about1.png" alt="About1"></div>
             <div><img src="./imgs/about2.png" alt="About2"></div>
