--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 		<div class = "contact_flex">
 			<div class = "card_title">
 				<h2>YouTube Tutorials</h2>
-				<p>As a UX practitioner in the U.S., I started my YouTube channel to share UX related knowledge with Taiwanese designers. Unlike in the U.S., UX resources in English aren't always digestable for ESL speakers in Taiwan. I'm most fulfilled when I help others grow and democratize knowledge for those who don't have access or equal opportunities.</p>
+				<p>As a UX practitioner in the US, I started my YouTube channel to share UX related knowledge with Taiwanese designers. Unlike in the US, UX resources in English aren't always digestable for ESL speakers in Taiwan. I'm most fulfilled when I help others grow and democratize knowledge for those who don't have access or equal opportunities.</p>
 				<div class="buttons">
 					<a href="https://www.youtube.com/channel/UCBzxKMkzhkqK7rUM35Qp2hg/videos"data-title="Youtube channel" aria-label="Youtube channel" target="_blank"><button type="button" class="button" data-filter="all">Check Out My Channel - It's Just BS</button></a>
 				</div>
