--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@ window['_fs_namespace'] = 'FS';
 		<script src="js/form.js?ckcachebust=502dfc0f5bf8273ad6d0b4f1c97265c5"></script>
 		<script src="js/typewriter.js?ckcachebust=d8fd9615b73568aa4b33d80ba079ba26"></script>
 		<script src="js/mixitup.min.js?ckcachebust=d7f378a1e447a9825c14ca1a13489fb6"></script>
+			<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "5d86b093756245acaf3e11320b056223"}'></script><!-- End Cloudflare Web Analytics -->
 
 	</body>
 </html>
