--- a/index.html
+++ b/index.html
@@ -184,6 +184,21 @@ window['_fs_namespace'] = 'FS';
 		</div>
 		<div class = "mix_container"> 
 			<div class="mix design">
+				<a href="tunnel.html" data-title="Cloudflare Tunnels Dashboard Interface" aria-label="Cloudflare Tunnels Dashboard Interface">
+					<div class="mix-overlay"></div>
+					<img src="imgs/d_tunnel.png" alt="Cloudflare Tunnels Dashboard Interface">
+				</a>
+					<div class="mix-details fadeIn-top">
+						<h3>Cloudflare Tunnels Dashboard Interface</h3>
+						<p>B2B | Web app</p>
+					</div>
+
+					<div class="project_detail">
+						<h3>Cloudflare Tunnels</h3>
+					</div>
+			</div>
+
+			<div class="mix design">
 				<a href="fomc.html" data-title="Fruit of the Month Club" aria-label="Fruit of the Month Club">
 					<div class="mix-overlay"></div>
 					<img src="imgs/d_fomc.png" alt="Fruit of the Month Club">
@@ -270,7 +285,7 @@ window['_fs_namespace'] = 'FS';
 				</div>
 			</div>
 
-			<div class="mix design">
+			<!--<div class="mix design">
 				<a href="graphic.html"data-title="UI" aria-label="UI">
 					<div class="mix-overlay"></div>
 					<img src="imgs/d_ui.png" alt="UI">
@@ -282,7 +297,7 @@ window['_fs_namespace'] = 'FS';
 				<div class="project_detail">
 					<h3>UI Design</h3>
 				</div>
-			</div>
+			</div>-->
 
 			<!--<div class="mix design">
 					<a href="commonwealth.html" data-title="commonwealth" aria-label="commonwealth">
@@ -350,10 +365,10 @@ window['_fs_namespace'] = 'FS';
 
 		<div class = "contact_flex">
 			<div class = "card_title">
-				<h2>YouTube Tutorials</h2>
-				<p>As a UX practitioner in the US, I started my YouTube channel to share UX related knowledge with Taiwanese designers. Unlike in the US, UX resources in English aren't always digestable for ESL speakers in Taiwan. I'm most fulfilled when I help others grow and democratize knowledge for those who don't have access or equal opportunities.</p>
+				<h2>Community Service</h2>
+				<p>I shared my UX knowledge and career learnings on the YouTube channel "Unblock". We're a group of 5 product practitioners whose goal is nurturing design leaders in the next 20 years.</p>
 				<div class="buttons">
-					<a href="https://www.youtube.com/channel/UCBzxKMkzhkqK7rUM35Qp2hg/videos"data-title="Youtube channel" aria-label="Youtube channel" target="_blank"><button type="button" class="button" data-filter="all">Check Out My Channel - It's Just BS</button></a>
+					<a href="https://www.youtube.com/channel/UC0cDihZ20PWUQzHh_hOigtA"data-title="Youtube channel" aria-label="Youtube channel" target="_blank"><button type="button" class="button" data-filter="all">Check Out Unblock</button></a>
 				</div>
 			</div>
 		</div>
